# Helpz

./: .gitignore  CMakeLists.txt  Helpz.pro  PKGBUILD  checkinstall_run_sudo.sh  helpz.pro  helpz_install.pri  helpz_version.pri
Base/: Base.pro  CMakeLists.txt  PKGBUILD  apply_parse.h  applyparse.h  base_version.cpp  base_version.h  data_stream.cpp  data_stream.h  fake_integer_sequence.h  logging.cpp  logging.h  settings.cpp  settings.h  settingshelper.h  simplethread.h  zfile.cpp  zfile.h  zstring.cpp  zstring.h
DBMeta/: CMakeLists.txt  DBMeta.pro  db_meta.h  db_table.cpp  db_table.h
DBWidgets/: CMakeLists.txt  DBWidgets.pro
DTLS/: CMakeLists.txt  DTLS.pro  dtls_client.cpp  dtls_client.h  dtls_client_controller.cpp  dtls_client_controller.h  dtls_client_node.cpp  dtls_client_node.h  dtls_client_thread.cpp  dtls_client_thread.h  dtls_controller.cpp  dtls_controller.h  dtls_credentials_manager.cpp  dtls_credentials_manager.h  dtls_node.cpp  dtls_node.h  dtls_server.cpp  dtls_server.h  dtls_server_controller.cpp  dtls_server_controller.h  dtls_server_node.cpp  dtls_server_node.h  dtls_server_thread.cpp  dtls_server_thread.h  dtls_session_manager_sql.cpp  dtls_session_manager_sql.h  dtls_socket.cpp  dtls_socket.h  dtls_tools.cpp  dtls_tools.h  dtls_version.cpp  dtls_version.h  dtlsbasic.cpp  dtlsbasic.h  dtlsclient.cpp  dtlsclient.h  dtlsproto.cpp  dtlsproto.h  dtlsserver.cpp  dtlsserver.h  (+1 more)
DTLS/OpenSSL/: dtlsserver.h  dtlssocket.h
DTLS/test/: dtls_test.pro
DTLS/test/dtls_client/: dtls_client.pro  main.cpp
DTLS/test/dtls_server/: dtls_server.pro  main.cpp  protocol_impl.cpp  protocol_impl.h  server.cpp  server.h
Database/: CMakeLists.txt  Database.pro  db_base.cpp  db_base.h  db_builder.cpp  db_builder.h  db_connection_info.cpp  db_connection_info.h  db_connectioninfo.cpp  db_connectioninfo.h  db_delete_row.cpp  db_delete_row.h  db_thread.cpp  db_thread.h  db_version.cpp  db_version.h
Network/: CMakeLists.txt  Network.pro  applyparse.h  net_defs.h  net_fragmented_message.cpp  net_fragmented_message.h  net_message_item.cpp  net_message_item.h  net_protocol.cpp  net_protocol.h  net_protocol_sender.cpp  net_protocol_sender.h  net_protocol_timer.cpp  net_protocol_timer.h  net_protocol_writer.cpp  net_protocol_writer.h  net_version.cpp  net_version.h  prototemplate.cpp  prototemplate.h  settingshelper.h  udpclient.cpp  udpclient.h  waithelper.cpp  waithelper.h
Service/: CMakeLists.txt  Service.pro  log.cpp  service.cpp  service.h  srv_version.cpp  srv_version.h
Widgets/: CMakeLists.txt
cmake/: FindBotan.cmake  build-definitions.cmake  install-prefix.cmake  install.cmake  project-version.cmake  qt-defines.cmake  resolve-headers.cmake
cmake/pkg/: aur.cmake  deb.cmake
include/: CMakeLists.txt  parse.sh
qtservice/: CMakeLists.txt
qtservice/src/: qtservice.cpp  qtservice.h  qtservice_unix.cpp  qtunixserversocket.cpp  qtunixsocket.cpp
tests/: tests.pro
tests/DTLS/: DTLS.pro  client_protocol.cpp  client_protocol.h  dtls.key  dtls.pem  main.qrc  server_protocol.cpp  server_protocol.h  tls_policy.conf  tst_main.cpp  tst_main.h
tests/Network/: Network.pro  tst_main.cpp
